@startuml random_number_gen_accept_reject
!pragma useIntermediatePackages false
!define ABSTRACT &#123;abstract&#125;

abstract class random_number_gen_accept_reject.AcceptanceRejectionMethod {
  _hat_func_estimator: HatFunctionEstimator
  ~_target_pdf_f(x) \t\t ABSTRACT
  ~_proposal_pdf_g(x, θ: tuple) \t\t ABSTRACT
  ~_sample_from_proposal_g_with_θ_optimal(n_rv) \t\t ABSTRACT
  ~sample(n_rv)

}
class random_number_gen_accept_reject.DefaultSupremumEstimator {
  _x0: List
  _x0_bounds: List[tuple]
  _θ0: List
  _θ0_bounds: List[tuple]
}
abstract class random_number_gen_accept_reject.HatFunctionEstimator {
  ~estimate_parameters(f: callable, g: callable) \t\t ABSTRACT
  ~H_x(x) \t\t ABSTRACT
}
class random_number_gen_accept_reject.SamplesTraceDisplay {
  __accepted: None
  __rejected: None
  __accepted_prob: None
  __rejected_prob: None
  ~plot()
}
abstract class random_number_gen_accept_reject.SupremumEstimatorTemplate {
  _f: callable
  _g: callable
  _C: float
  _θ: float
  ~_max_f_g_ratio(θ: tuple)
  ~_maximize_wrt_x(ratio_f: callable): tuple \t\t ABSTRACT
  ~_minimize_wrt_θ(ratio_f: callable): tuple \t\t ABSTRACT
}
random_number_gen_accept_reject.AcceptanceRejectionMethod *-- random_number_gen_accept_reject.HatFunctionEstimator
random_number_gen_accept_reject.AcceptanceRejectionMethod *-- random_number_gen_accept_reject.SamplesTraceDisplay
random_number_gen_accept_reject.SupremumEstimatorTemplate <|-- random_number_gen_accept_reject.DefaultSupremumEstimator
random_number_gen_accept_reject.HatFunctionEstimator <|-- random_number_gen_accept_reject.SupremumEstimatorTemplate
footer Generated by //py2puml//
@enduml
